Closed Bug 1306603 Opened 9 years ago Closed 9 years ago

TabChild::SetAPZChild is never called with a non-null APZChild

Categories

(Core :: DOM: Content Processes, defect, P2)

51 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox49 --- unaffected
firefox50 --- unaffected
firefox51 --- wontfix
firefox52 --- fixed

People

(Reporter: kats, Assigned: kats)

References

(Blocks 1 open bug)

Details

(Keywords: regression, Whiteboard: [gfx-noted])

Attachments

(2 files)

The patch at [1] removed a call to TabChild::SetAPZChild and didn't replace it with anything equivalent. So now it looks like TabChild::mAPZChild is always null, and so the code at [2] will never actually run. To be honest I'm not entirely sure if we still need that code but we should figure that out and then either remove it or fix it. [1] https://hg.mozilla.org/mozilla-central/rev/b0d9956e1251 [2] http://searchfox.org/mozilla-central/rev/d1276b5b84e6cf7991c8e640b5e0ffffd54575a6/dom/ipc/TabChild.cpp#3014
Kan-ru, do you know if the code added in bug 845169 is still needed on desktop or Fennec? Or was it specific to B2G?
Flags: needinfo?(kchen)
(In reply to Kartikaya Gupta (email:kats@mozilla.com) from comment #1) > Kan-ru, do you know if the code added in bug 845169 is still needed on > desktop or Fennec? Or was it specific to B2G? It was very specific to the B2G keyboard app. I don't think it's used anywhere else. I even think we can safely remove all mozpasspointerevents related code now.
Flags: needinfo?(kchen)
Awesome, thanks! That will be some nice cleanup.
Try push with all the mozpasspointerevents code removed: https://treeherder.mozilla.org/#/jobs?repo=try&revision=49877f198ba7
Blocks: nukeb2g
Component: Panning and Zooming → DOM: Content Processes
Comment on attachment 8796716 [details] Bug 1306603 - Remove APZ code that uses the mozpasspointerevents update region. https://reviewboard.mozilla.org/r/82468/#review81366
Attachment #8796716 - Flags: review?(kchen) → review+
Comment on attachment 8796717 [details] Bug 1306603 - Remove rest of mozpasspointerevents code as it is not needed any more. https://reviewboard.mozilla.org/r/82470/#review82084 Hooray!
Attachment #8796717 - Flags: review?(kchen) → review+
I realized that in part 1 I can also remove RemoteContentController::mMutex since it's only used to protect stuff that's being deleted now. So I took that out as well.
Pushed by kgupta@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/4fef0ff55d14 Remove APZ code that uses the mozpasspointerevents update region. r=kanru https://hg.mozilla.org/integration/mozilla-inbound/rev/9da2b89efdec Remove rest of mozpasspointerevents code as it is not needed any more. r=kanru
No need to uplift this to 51 since the issue described in comment 0 isn't really a bug in 51.
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
No longer blocks: 1369194
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: