Bug 1306603 - Remove APZ code that uses the mozpasspointerevents update region. r=kanru

MozReview-Commit-ID: L8QQkoSjFTu